--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 pandas = "2.2.2"
 matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
+scikit-learn = "^1.5.2"
+xgboost = "^2.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
