--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pandas = "2.2.2"
+pandas = "2.1.4"
 matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
 scikit-learn = "^1.5.2"
 xgboost = "^2.1.1"
+kafka-python = "^2.0.2"
+python-dotenv = "^1.0.1"
+sqlalchemy = "^2.0.36"
+sqlalchemy-utils = "^0.41.2"
 
 
 [tool.poetry.group.dev.dependencies]
