--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,13 @@ matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
 scikit-learn = "^1.5.2"
 xgboost = "^2.1.1"
-kafka-python = "^2.0.2"
 python-dotenv = "^1.0.1"
 sqlalchemy = "^2.0.36"
 sqlalchemy-utils = "^0.41.2"
+confluent-kafka = "^2.6.0"
+kafka-python = "^2.0.2"
+psycopg2-binary = "^2.9.10"
+kafka-python-ng = "^2.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
